add HTML structure and navigation for algorithms project

--- a/algorithm.html
+++ b/algorithm.html
@@ -7,6 +7,27 @@
         <link rel="stylesheet" href="Assets/css/main.css" />
     </head>
     <body>
-        lol
+        <div class="container">
+            <header>
+                <h1>Algorithms Project</h1>
+                <p>Welcome</p>
+            </header>
+
+            <main>
+                <div class="button-container">
+                    <button id="Merge" class="redirect-btn">Merge-Sort</button>
+                </div>
+                <div class="button-container">
+                    <button id="quick" class="redirect-btn">Quick-Sort</button>
+                </div>
+                <div class="button-container">
+                    <button id="binary" class="redirect-btn">
+                        Binary Search
+                    </button>
+                </div>
+            </main>
+        </div>
+
+        <script src="js/main.js"></script>
     </body>
 </html>
