quicksort page added

--- a/algorithm.html
+++ b/algorithm.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Algorithms</title>
-        <link rel="stylesheet" href="Assets/css/main.css" />
-    </head>
-    <body>
-        <div class="container">
-            <header>
-                <h1>Algorithms Project</h1>
-                <p>Welcome</p>
-            </header>
 
-            <main>
-                <div class="button-container">
-                    <button id="Merge" class="redirect-btn">Merge-Sort</button>
-                </div>
-                <div class="button-container">
-                    <button id="quick" class="redirect-btn">Quick-Sort</button>
-                </div>
-                <div class="button-container">
-                    <button id="binary" class="redirect-btn">
-                        Binary Search
-                    </button>
-                </div>
-            </main>
-        </div>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Algorithms</title>
+    <link rel="stylesheet" href="Assets/css/main.css" />
+</head>
 
-        <script src="js/main.js"></script>
-    </body>
+<body>
+    <div class="container">
+        <header>
+            <h1>Algorithms Project</h1>
+            <p>Welcome</p>
+        </header>
+
+        <main>
+            <div class="button-container">
+                <button id="Merge" class="redirect-btn">Merge-Sort</button>
+            </div>
+            <div class="button-container">
+                <button id="quick" class="redirect-btn"
+                    onclick="window.location.href = 'quick_sort.html';">Quick-Sort</button>
+            </div>
+            <div class="button-container">
+                <button id="binary" class="redirect-btn">Binary Search</button>
+            </div>
+        </main>
+    </div>
+
+    <script src="js/main.js"></script>
+</body>
+
 </html>
