--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Algorithm MainPage</title>
-        <link rel="stylesheet" href="Assets/css/main.css" />
-    </head>
-    <body>
-        <div class="container">
-            <header>
-                <h1>Algorithms Project</h1>
-                <p>Welcome</p>
-            </header>
 
-            <main>
-                <div class="info-section">
-                    <!-- <p>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Algorithm MainPage</title>
+    <link rel="stylesheet" href="Assets/css/main.css" />
+</head>
+
+<body>
+    <div class="container">
+        <header>
+            <h1>Algorithms Project</h1>
+            <p>Welcome</p>
+        </header>
+
+        <main>
+            <div class="info-section">
+                <!-- <p>
                         idk kont kateb 7aga hna
                     </p> -->
-                    <p class="Names">Youssef Ahmed 20223546</p>
-                    <p class="Names">Nour Eldeen Hatem 20222912???</p>
-                    <p class="Names">Malak Ahmed 2022 idk</p>
-                    <p class="Names">Zeina Walid msh 3aref</p>
-                </div>
+                <p class="Names">Youssef Ahmed 20223546</p>
+                <p class="Names">Noureldeen Hatem 20222912</p>
+                <p class="Names">Malak Ahmed 20224976</p>
+                <p class="Names">Zeina Walid 20221775</p>
+            </div>
 
-                <div class="button-container">
-                    <button id="redirectButton" class="redirect-btn">
-                        Start
-                    </button>
-                </div>
-            </main>
-        </div>
+            <div class="button-container">
+                <button id="redirectButton" class="redirect-btn">Start</button>
+            </div>
+        </main>
+    </div>
 
-        <script src="js/main.js"></script>
-    </body>
+    <script src="js/main.js"></script>
+</body>
+
 </html>
