--- a/quick_sort.html
+++ b/quick_sort.html
@@ -1,11 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Quick Sort</title>
-    </head>
-    <body>
-        Quick sort
-    </body>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Quick Sort Visualizer</title>
+
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f3f4f6;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            text-align: center;
+            overflow: auto;
+        }
+
+        .container {
+            background-color: #fff;
+            border-radius: 10px;
+            padding: 30px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            width: 80%;
+            max-width: 600px;
+            overflow-y: auto;
+            /* Allow scrolling when content overflows */
+            height: 90vh;
+            /* Restrict the height */
+        }
+
+        h2 {
+            font-size: 32px;
+            color: #333;
+        }
+
+        p {
+            font-size: 18px;
+            color: #555;
+        }
+
+        input {
+            padding: 10px;
+            font-size: 16px;
+            border: 2px solid #ddd;
+            border-radius: 5px;
+            width: 80%;
+            max-width: 300px;
+            margin: 10px 0;
+        }
+
+        button {
+            padding: 12px 20px;
+            font-size: 18px;
+            border: none;
+            background-color: #4CAF50;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        #steps,
+        #result {
+            margin-top: 20px;
+            padding: 20px;
+            background-color: #f9fafb;
+            border-radius: 8px;
+            border: 1px solid #ddd;
+        }
+
+        #arrayContainer span {
+            display: inline-block;
+            width: 50px;
+            height: 50px;
+            margin: 5px;
+            padding: 15px;
+            text-align: center;
+            font-size: 18px;
+            border-radius: 8px;
+            background-color: #ddd;
+            font-weight: bold;
+        }
+
+        .pivot {
+            background-color: #ffcc00;
+        }
+
+        .left,
+        .right {
+            background-color: #8ef5a8;
+        }
+
+        .swapped {
+            background-color: #f56565;
+        }
+
+        .label {
+            font-size: 14px;
+            font-weight: bold;
+            color: #333;
+        }
+    </style>
+</head>
+
+<body>
+
+    <div class="container">
+        <h2>QuickSort Visualizer</h2>
+        <p>Enter numbers separated by commas (e.g., 3, 5, 2, 1, 6):</p>
+        <input id="inputArray" type="text" placeholder="e.g. 3, 5, 2, 1, 6">
+        <button onclick="startSort()">Sort</button>
+
+        <h3>Steps:</h3>
+        <div id="steps"></div>
+
+        <h3>Final Sorted Array and Info:</h3>
+        <div id="result"></div>
+    </div>
+
+    <script src="js/quicksort.js"></script>
+
+</body>
+
 </html>
