Renamed description head

--- a/merge_sort.html
+++ b/merge_sort.html
@@ -102,7 +102,7 @@
     <div id="tree" class="tree"></div>
 
     <div id="complexityInfo">
-        <h3>Binary Search Complexity:</h3>
+        <h3>Merge Sort Complexity:</h3>
         <p><strong>Average Time Complexity:</strong> O(n log n)</p>
         <p><strong>Best Time Complexity:</strong> O(n log n)</p>
         <p><strong>Worst Time Complexity:</strong> O(n log n)</p>
