Added animation to merge sortt

--- a/merge_sort.html
+++ b/merge_sort.html
@@ -102,11 +102,7 @@
     <div id="tree" class="tree"></div>
 
     <div id="complexityInfo">
-<<<<<<< HEAD
         <h3>Merge sort Complexity:</h3>
-=======
-        <h3>Merge Sort Complexity:</h3>
->>>>>>> 132222d3f4d80178476a991d11ae3f36159f831c
         <p><strong>Average Time Complexity:</strong> O(n log n)</p>
         <p><strong>Best Time Complexity:</strong> O(n log n)</p>
         <p><strong>Worst Time Complexity:</strong> O(n log n)</p>
@@ -241,7 +237,7 @@
 
             mergeSortTree(inputArray);
 
-            await renderTree(); // Wait for the animation to finish
+            await renderTree(); 
         }
     </script>
 
